tinyc/test/bad/struct-no-typename.c
struct s
{
    int x, y, z;
};

int main()
{
    s x;

    return 0;
}
